[package]
name = "polygone-hide"
version = "0.1.0"
edition = "2021"
authors = ["Lévy <contact@soe-ai.dev>"]

[dependencies]
polygone-core = { path = "../Polygone" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fast-socks5 = "0.9"
libp2p = { version = "0.53", features = ["tokio", "tcp", "noise", "yamux", "kad", "request-response", "identify"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
blake3 = "1.5"
